--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
 
             <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
@@ -22,6 +22,16 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </UL>
         </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h4 class="banner-greeting">Hi, I  am</h4>
+                <h1 class="banner-titile">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-img" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
