--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     </main>
     <footer>
                 <div class="footer-column">
-                    <h3 style="text-align: left; class="section-title">Lets Connect</h3>
-                    <p style="text-align: left; class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <h3 style="text-align: left;"class="section-title">Lets Connect</h3>
+                    <p style="text-align: left;" class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                     <div class="social-links">
                         <a href=""><img src="images/icons/facebook.png" alt=""></a>
                         <a href=""><img src="images/icons/twitter.png" alt=""></a>
