--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -27,8 +27,8 @@
                 <h4 class="banner-greeting">Hi, I  am</h4>
                 <h1 class="banner-titile">Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-img" src="images/hardy.png" alt="">
         </div>
@@ -163,7 +163,7 @@
             
     </div>
     <div class="Download-CV">
-    <button class="btn-primary">Download CV</button>
+    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
     </div>
 </Section>
 
@@ -183,7 +183,7 @@
                     <form class="contact">
                         <input type="text" placeholder="Your name">
                         <input type="email" placeholder="Your email" id="">
-                        <textarea placeholder="Message" id="" cols="30" rows="10"></textarea>
+                        <textarea placeholder="Message" id="" cols="30" rows="4"></textarea>
                         <input class="btn-primary" type="submit" value="Submit">
                     </form>
                 </div>
