portfolio section added

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header class="header">
         <nav>
-
-            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
+<img class="header-logo" src="images/Logo.png" alt="">
+            <!-- <h2 class="nav-title"><span class="text-primary">AB</span>DULLAH</h2> -->
             <UL>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
@@ -25,12 +25,12 @@
         <div class="banner">
             <div class="banner-contant">
                 <h4 class="banner-greeting">Hi, I  am</h4>
-                <h1 class="banner-titile">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <h1 class="banner-titile">Ibn Abdullah</h1>
+                <p class="header-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img class="profile-img" src="images/hardy.png" alt="">
+            <img  class="profile-img" src="images/abdullah.png" alt="">
         </div>
     </header>
     <main>
@@ -45,22 +45,22 @@
     <div class="about-info">
         <h4 class="info-title">Name:
              </h4>
-        <p class="title-description">Mary Hardy</p>
+        <p class="title-description">Ibn Abdullah</p>
     </div>
     <div class="about-info">
         <h4 class="info-title">Email:
             </h4>
-        <p class="title-description">info@gmail.com</p>
+        <p class="title-description">arfathossen541@gmail.com</p>
     </div>
     <div class="about-info">
         <h4 class="info-title">Date of birth:
            </h4>
-        <p class="title-description"> 11 November 1987</p>
+        <p class="title-description"> 13 November,2002</p>
     </div>
     <div class="about-info">
         <h4 class="info-title">From:
             </h4>
-        <p class="title-description">Los Angeles, USA</p>
+        <p class="title-description">Chottogram, Bangladesh</p>
     </div>
 
 </div>
@@ -70,7 +70,7 @@
 <h3 class="section-title">What I do</h3>
 <p class="section-description what">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
-<div class="skill-container">
+<div class="skill-container ">
     <div class="skill">
         <img src="images/icons/js.png" alt="">
         <h3 class="skilll-titke">Vanilla JavaScript</h3>
@@ -166,6 +166,45 @@
     <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
     </div>
 </Section>
+
+
+<!--protpolio section start-->
+
+<section>
+    <h3 class="section-title">My Prtojects</h3>
+ 
+<div class="protpolio">
+    <div class="box1">
+        <img src="images/prejects/work1.jpg">
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work2.png">
+    </div>
+       <div class="box1">
+        <img src="images/prejects/work3.jpg">
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work5.png"> 
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work6.png">
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work7.png">
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work4.png">
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work8.png">
+    </div>
+</div>
+
+</section>
+<!--protpolio section close-->
+
+
+
 
     </main>
     <footer>
