portfolio images added

--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
         <img src="images/prejects/work3.jpg">
     </div>
     <div class="box1">
-        <img src="images/prejects/work5.png"> 
+        <img src="images/prejects/work4.jpg"> 
+    </div>
+    <div class="box1">
+        <img src="images/prejects/work5.png">
     </div>
     <div class="box1">
         <img src="images/prejects/work6.png">
     </div>
     <div class="box1">
         <img src="images/prejects/work7.png">
-    </div>
-    <div class="box1">
-        <img src="images/prejects/work4.png">
     </div>
     <div class="box1">
         <img src="images/prejects/work8.png">
