header logo added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav>
-<img class="header-logo" src="images/Logo.png" alt="">
+<img class="header-logo" src="./images/logo.png" alt="">
             <!-- <h2 class="nav-title"><span class="text-primary">AB</span>DULLAH</h2> -->
             <UL>
                 <li><a href="">Portfolio</a></li>
