--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
 
 <div class="skill-container ">
     <div class="skill">
-        <img src="images/icons/js.png" alt="">
+        <img style="width:45px" src="./images/icons/java.png" alt="">
         <h3 class="skilll-titke">Vanilla JavaScript</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
-        <img src="images/icons/react.png" alt="">
+        <img src="./images/icons/react.png" alt="">
         <h3 class="skilll-titke">React</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
-        <img src="images/icons/nodejs.png" alt="">
+        <img src="./images/icons/nodejs.png" alt="">
         <h3 class="skilll-titke">Node.js</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
-        <img src="images/icons/mongo.png" alt="">
+        <img style="width:50px" src="./images/icons/mongodb.png" alt="">
         <h3 class="skilll-titke">MongoDB</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
