--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="header">
+    <header class="header" >
         <nav>
 <img class="header-logo" src="./images/logo.png" alt="">
             <!-- <h2 class="nav-title"><span class="text-primary">AB</span>DULLAH</h2> -->
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-<section class="about">
+<section class="about ">
 <h3 class="section-title">About Me</h3>
 <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
 
@@ -67,6 +67,8 @@
 </section>
 
 <!-- what i do section start -->
+
+<section>
 <h3 class="section-title">What I do</h3>
 <p class="section-description what">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
@@ -92,6 +94,7 @@
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
 </div>
+</section>
 
 <Section>
     <h3 class="section-title">A summary of My Resume</h3>
@@ -231,3 +234,32 @@
     </footer>
 </body>
 </html>
+ <!-- <header class="header">
+      
+        <nav class="manus-container">
+            <h2 class="header-title">Ab<span class="text-primary">dullah</span></h2>
+        <ul class="manus">
+            <li class="manus-item"><a href="">HOME</a></li>
+            <li class="manus-item"><a href="">ABOUT</a></li>
+            <li class="manus-item"><a href="">SERVICES</a></li>
+            <li class="manus-item"><a href="">WORKS</a></li>
+            <li class="manus-item"><a href="">CONTACT</a></li>
+
+            <button class="btn-primary menus-button">Hire me</button>
+        </ul>
+        </nav>
+       <div class="banner-container">
+
+        <div class="banner-content">
+            <h4 class="banner-greeting">Hi, I  am</h4>
+            <h1 class="banner-titile">Ibn Abdullah</h1>
+            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
+        </div>
+        <img  class="profile-img" src="./images/abdullah.png" alt="">
+        </div>
+           
+       </div>
+    </header>
+ -->
