--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </UL>
         </nav>
         <div class="banner">
-            <div class="banner-contant">
+            <div class="banner-content">
                 <h4 class="banner-greeting">Hi, I  am</h4>
-                <h1 class="banner-titile">Ibn Abdullah</h1>
+                <h1 class="banner-title">Ibn Abdullah</h1>
                 <p class="header-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
@@ -75,7 +75,7 @@
 <div class="skill-container ">
     <div class="skill">
         <img style="width:45px" src="./images/icons/java.png" alt="">
-        <h3 class="skilll-titke">Vanilla JavaScript</h3>
+        <h3 class="skilll-titke">JavaScript</h3>
         <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
     <div class="skill">
@@ -171,12 +171,12 @@
 </Section>
 
 
-<!--protpolio section start-->
+<!--portfolio section start-->
 
 <section>
     <h3 class="section-title">My Prtojects</h3>
  
-<div class="protpolio">
+<div class="portfolio">
     <div class="box1">
         <img src="images/prejects/work1.jpg">
     </div>
@@ -204,7 +204,7 @@
 </div>
 
 </section>
-<!--protpolio section close-->
+<!--portfolio section close-->
 
 
 
