--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="header" >
+    <header id="home" class="header" >
         <nav>
 <img class="header-logo" src="./images/logo.png" alt="">
             <!-- <h2 class="nav-title"><span class="text-primary">AB</span>DULLAH</h2> -->
             <UL>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#works">Works</a></li>
+                <li><a href="#footer">Contact</a></li>
                 <li><button class="btn-primary">Hire me</button></li>
             </UL>
         </nav>
         <div class="banner">
             <div class="banner-content">
                 <h4 class="banner-greeting">Hi, I  am</h4>
-                <h1 class="banner-title">Ibn Abdullah</h1>
+                <h1 class="banner-title">Arafat Hosen</h1>
                 <p class="header-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
@@ -34,7 +37,7 @@
         </div>
     </header>
     <main>
-<section class="about ">
+<section id="about" class="about ">
 <h3 class="section-title">About Me</h3>
 <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
 
@@ -45,7 +48,7 @@
     <div class="about-info">
         <h4 class="info-title">Name:
              </h4>
-        <p class="title-description">Ibn Abdullah</p>
+        <p class="title-description">Arafat Hosen</p>
     </div>
     <div class="about-info">
         <h4 class="info-title">Email:
@@ -68,7 +71,7 @@
 
 <!-- what i do section start -->
 
-<section>
+<section  id="skills">
 <h3 class="section-title">What I do</h3>
 <p class="section-description what">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
@@ -173,7 +176,7 @@
 
 <!--portfolio section start-->
 
-<section>
+<section  id="works">
     <h3 class="section-title">My Prtojects</h3>
  
 <div class="portfolio">
@@ -210,7 +213,7 @@
 
 
     </main>
-    <footer>
+    <footer id="footer">
                 <div class="footer-column">
                     <h3 style="text-align: left;"class="section-title">Lets Connect</h3>
                     <p style="text-align: left;" class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
